--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "declarations": true
   },
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
+    "dayjs": "^1.8.19",
     "egg": "^2.15.1",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
