--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "await-stream-ready": "^1.0.1",
     "dayjs": "^1.8.19",
     "egg": "^2.15.1",
+    "egg-cors": "^2.2.3",
+    "egg-jwt": "^3.1.7",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "uuid": "^3.3.2"
   },
